--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Huaihua College garbage sorting Club</title>
+<title>怀化学院垃圾分类俱乐部</title>
 <meta name="keywords" content="green, field, web, theme, design, free css, website templates, CSS, HTML" />
 <meta name="description" content="Green Field Theme is a free website template provided by templatemo.com for all web designers and webmasters." />
 <link href="templatemo_style.css" rel="stylesheet" type="text/css" />
