群图片添加

--- a/contact.html
+++ b/contact.html
@@ -61,9 +61,8 @@
             <h4>扫码加入qq群：<br />
             </h4>
             </div>
-    	  <img src="file:///C|/Users/11913/Desktop/怀化学院垃圾分类俱乐群聊二维码.png" width="298" height="313" />
-            
-            <div class="cleaner"></div>
+    	  <span class="cleaner"><img src="images/怀化学院垃圾分类俱乐群聊二维码.png" width="298" height="313" /></span>
+    	  <div class="cleaner"></div>
         </div>
 		<div class="cleaner"></div>
     </div>    
