--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
            	  <div label-module="para">
            	    <div></div>
            	    <div label-module="para">
-           	      <div><a nslog-type="9317" href="https://baike.baidu.com/pic/%E5%9E%83%E5%9C%BE%E5%88%86%E7%B1%BB/2904193/0/4a36acaf2edda3cc7cd90bdcd8a12e01213fb90e34bc?fr=lemma&amp;ct=single" target="_blank" title=""><img src="https://bkimg.cdn.bcebos.com/pic/4a36acaf2edda3cc7cd90bdcd8a12e01213fb90e34bc?x-bce-process=image/resize,m_lfit,w_220,limit_1" alt="" /></a></div>
+           	      <div><a nslog-type="9317" href="https://baike.baidu.com/pic/%E5%9E%83%E5%9C%BE%E5%88%86%E7%B1%BB/2904193/0/4a36acaf2edda3cc7cd90bdcd8a12e01213fb90e34bc?fr=lemma&amp;ct=single" target="_blank" title=""><img src="images/TK{8XQ9~HW]VK[NU0LUSNEE.png" width="259" height="304" /></a></div>
            	      <strong><a target="_blank" href="https://baike.baidu.com/item/%E5%8F%AF%E5%9B%9E%E6%94%B6%E7%89%A9/2479461" data-lemmaid="2479461">可回收物</a></strong>主要包括<a target="_blank" href="https://baike.baidu.com/item/%E5%BA%9F%E7%BA%B8">废纸</a>、塑料、<a target="_blank" href="https://baike.baidu.com/item/%E7%8E%BB%E7%92%83/287" data-lemmaid="287">玻璃</a>、金属和<a target="_blank" href="https://baike.baidu.com/item/%E5%B8%83%E6%96%99">布料</a>五大类。</div>
            	    <div label-module="para">废纸：主要包括报纸、期刊、图书、各种包装纸等。但是，要注意纸巾和厕所纸由于水溶性太强不可回收。</div>
            	    <div label-module="para"><a target="_blank" href="https://baike.baidu.com/item/%E5%A1%91%E6%96%99/573005" data-lemmaid="573005">塑料</a>：各种塑料袋、塑料泡沫、塑料包装（快递包装纸是其他垃圾/干垃圾）、一次性塑料餐盒餐具、硬塑料、塑料牙刷、塑料杯子、矿泉水瓶等。</div>
@@ -147,7 +147,7 @@
                 	  <h3>厨余垃圾</h3>
               	  </div>
                 	<div label-module="para">
-                	  <div><a nslog-type="9317" href="https://baike.baidu.com/pic/%E5%9E%83%E5%9C%BE%E5%88%86%E7%B1%BB/2904193/0/a71ea8d3fd1f41343b06c9112a1f95cad1c85ea8?fr=lemma&amp;ct=single" target="_blank" title=""><img src="https://bkimg.cdn.bcebos.com/pic/a71ea8d3fd1f41343b06c9112a1f95cad1c85ea8?x-bce-process=image/resize,m_lfit,w_220,limit_1" alt="" /></a></div>
+                	  <div><a nslog-type="9317" href="https://baike.baidu.com/pic/%E5%9E%83%E5%9C%BE%E5%88%86%E7%B1%BB/2904193/0/a71ea8d3fd1f41343b06c9112a1f95cad1c85ea8?fr=lemma&amp;ct=single" target="_blank" title=""><img src="images/%0J3PW)4@E1B@~_IVJ`CXJ6.png" width="203" height="299" /></a></div>
                 	  <strong><a target="_blank" href="https://baike.baidu.com/item/%E5%8E%A8%E4%BD%99%E5%9E%83%E5%9C%BE/2283789" data-lemmaid="2283789">厨余垃圾</a></strong>（上海称<strong><a target="_blank" href="https://baike.baidu.com/item/%E6%B9%BF%E5%9E%83%E5%9C%BE/23589703" data-lemmaid="23589703">湿垃圾</a></strong>）包括剩菜剩饭、骨头、菜根菜叶、果皮等食品类废物。经生物技术就地处理堆肥，每吨可生产0.6~0.7吨有机肥料。</div>
                 	<p class="date">&nbsp;</p>
 				</div>
@@ -163,7 +163,7 @@
                     <div><a nslog-type="9317" href="https://baike.baidu.com/pic/%E5%9E%83%E5%9C%BE%E5%88%86%E7%B1%BB/2904193/0/8435e5dde71190ef76c63f2317538a16fdfaae51cabc?fr=lemma&amp;ct=single" target="_blank" title=""><br /></a>
                       <div label-module="para">
                         <div><a nslog-type="9317" href="https://baike.baidu.com/pic/%E5%9E%83%E5%9C%BE%E5%88%86%E7%B1%BB/2904193/0/ac345982b2b7d0a20cf44f6112a761094b36adaf2cbc?fr=lemma&amp;ct=single" target="_blank" title=""><br />
-                        <img src="https://bkimg.cdn.bcebos.com/pic/ac345982b2b7d0a20cf44f6112a761094b36adaf2cbc?x-bce-process=image/resize,m_lfit,w_220,limit_1" alt="" /></a></div>
+                        <img src="images/NCX]YQ0}40RG88SD%AS20K6.png" width="295" height="121" /></a></div>
                       </div>
                     </div>
                     <strong><a target="_blank" href="https://baike.baidu.com/item/%E5%85%B6%E4%BB%96%E5%9E%83%E5%9C%BE/10379912" data-lemmaid="10379912">其他垃圾</a></strong>（上海称<strong><a target="_blank" href="https://baike.baidu.com/item/%E5%B9%B2%E5%9E%83%E5%9C%BE/23589706" data-lemmaid="23589706">干垃圾</a></strong>）包括除上述几类垃圾之外的砖瓦陶瓷、渣土、卫生间废纸、纸巾等难以回收的废弃物及尘土、食品袋（盒）。采取卫生填埋可有效减少对地下水、地表水、土壤及空气的污染。</div>
@@ -183,7 +183,10 @@
                 <h3>有害垃圾</h3>
               </div>
               <div label-module="para">
-                <div><a nslog-type="9317" href="https://baike.baidu.com/pic/%E5%9E%83%E5%9C%BE%E5%88%86%E7%B1%BB/2904193/0/71cf3bc79f3df8dc6ad242fec211728b461028f6?fr=lemma&amp;ct=single" target="_blank" title="有害垃圾"><img src="https://bkimg.cdn.bcebos.com/pic/71cf3bc79f3df8dc6ad242fec211728b461028f6?x-bce-process=image/resize,m_lfit,w_220,limit_1" alt="有害垃圾" /></a>有害垃圾</div>
+                <div>
+                  <p><a nslog-type="9317" href="https://baike.baidu.com/pic/%E5%9E%83%E5%9C%BE%E5%88%86%E7%B1%BB/2904193/0/71cf3bc79f3df8dc6ad242fec211728b461028f6?fr=lemma&amp;ct=single" target="_blank" title="有害垃圾"><img src="images/(@_~[M4KJ}6Q)CH`~7)MB@G.png" width="205" height="341" /></a></p>
+                  <p>有害垃圾</p>
+                </div>
                 <strong><a target="_blank" href="https://baike.baidu.com/item/%E6%9C%89%E5%AE%B3%E5%9E%83%E5%9C%BE/5677220" data-lemmaid="5677220">有害垃圾</a></strong>含有对人体健康有害的<a target="_blank" href="https://baike.baidu.com/item/%E9%87%8D%E9%87%91%E5%B1%9E">重金属</a>、有毒的物质或者对环境造成现实危害或者潜在危害的<a target="_blank" href="https://baike.baidu.com/item/%E5%BA%9F%E5%BC%83%E7%89%A9">废弃物</a>。包括电池、荧光灯管、灯泡、水银温度计、油漆桶、部分家电、过期药品及其容器、过期化妆品等。这些垃圾一般使用单独回收或填埋处理。</div>
               <div></div>
 </div>
