--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Green Field Theme - Blog Page</title>
+<title>怀化学院垃圾分类俱乐部 - 俱乐部概况</title>
 <meta name="keywords" content="blog, green, field, web, theme, design, free templates, website templates, CSS, HTML" />
 <meta name="description" content="Green Field Blog - free website Template from www.moobnn.com for all web designers" />
 <link href="templatemo_style.css" rel="stylesheet" type="text/css" />
