--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Green Field Theme - About Our Company</title>
+<title>怀化学院垃圾分类俱乐部 - 环保小贴士</title>
 <meta name="keywords" content="company, green, field, web design, free css, website templates, CSS, HTML" />
 <meta name="description" content="About Green Field - free website template provided by templatemo.com for all web designers" />
 <link href="templatemo_style.css" rel="stylesheet" type="text/css" />
