--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Green Field Theme - Contact Page</title>
+<title>怀化学院垃圾分类俱乐部 - 联系我们</title>
 <meta name="keywords" content="contact, page, green, field, web, theme, design, free templates, website templates, CSS, HTML" />
 <meta name="description" content="Contact Green Field Theme - free CSS template for all web designers" />
 <link href="templatemo_style.css" rel="stylesheet" type="text/css" />
