--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Green Field Theme - Our Services</title>
+<title>怀化学院垃圾分类俱乐部 - 幽默笑话</title>
 <meta name="keywords" content="service, services, green, field, web, theme, design, free templates, website templates, CSS, HTML" />
 <meta name="description" content="Green Field Services - free website template provided by templatemo.com for everyone" />
 <link href="templatemo_style.css" rel="stylesheet" type="text/css" />
