--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 	  <h3>厨余垃圾</h3>
               	  </div>
                 	<div label-module="para">
-                	  <div><a nslog-type="9317" href="https://baike.baidu.com/pic/%E5%9E%83%E5%9C%BE%E5%88%86%E7%B1%BB/2904193/0/a71ea8d3fd1f41343b06c9112a1f95cad1c85ea8?fr=lemma&amp;ct=single" target="_blank" title=""><img src="images/(Y6XOI)]HEC(K_Z@`HD)%DV.png" width="196" height="337" /></a></div>
+                	  <div><a nslog-type="9317" href="https://baike.baidu.com/pic/%E5%9E%83%E5%9C%BE%E5%88%86%E7%B1%BB/2904193/0/a71ea8d3fd1f41343b06c9112a1f95cad1c85ea8?fr=lemma&amp;ct=single" target="_blank" title=""><img src="images/4QPS~8PVDCF@MWC~00RF)@G.png" width="319" height="178" /></a></div>
                 	  <strong><a target="_blank" href="https://baike.baidu.com/item/%E5%8E%A8%E4%BD%99%E5%9E%83%E5%9C%BE/2283789" data-lemmaid="2283789">厨余垃圾</a></strong>（上海称<strong><a target="_blank" href="https://baike.baidu.com/item/%E6%B9%BF%E5%9E%83%E5%9C%BE/23589703" data-lemmaid="23589703">湿垃圾</a></strong>）包括剩菜剩饭、骨头、菜根菜叶、果皮等食品类废物。经生物技术就地处理堆肥，每吨可生产0.6~0.7吨有机肥料。</div>
                 	<p class="date">&nbsp;</p>
 				</div>
@@ -163,7 +163,7 @@
                     <div><a nslog-type="9317" href="https://baike.baidu.com/pic/%E5%9E%83%E5%9C%BE%E5%88%86%E7%B1%BB/2904193/0/8435e5dde71190ef76c63f2317538a16fdfaae51cabc?fr=lemma&amp;ct=single" target="_blank" title=""><br /></a>
                       <div label-module="para">
                         <div><a nslog-type="9317" href="https://baike.baidu.com/pic/%E5%9E%83%E5%9C%BE%E5%88%86%E7%B1%BB/2904193/0/ac345982b2b7d0a20cf44f6112a761094b36adaf2cbc?fr=lemma&amp;ct=single" target="_blank" title=""><br />
-                        <img src="images/G2}U1X70HATFJ%T`[_N$C5H.png" width="217" height="160" /></a></div>
+                        <img src="images/SS9}~4]Y}E3]W$6%J[5GX86.png" width="335" height="167" /></a></div>
                       </div>
                     </div>
                     <strong><a target="_blank" href="https://baike.baidu.com/item/%E5%85%B6%E4%BB%96%E5%9E%83%E5%9C%BE/10379912" data-lemmaid="10379912">其他垃圾</a></strong>（上海称<strong><a target="_blank" href="https://baike.baidu.com/item/%E5%B9%B2%E5%9E%83%E5%9C%BE/23589706" data-lemmaid="23589706">干垃圾</a></strong>）包括除上述几类垃圾之外的砖瓦陶瓷、渣土、卫生间废纸、纸巾等难以回收的废弃物及尘土、食品袋（盒）。采取卫生填埋可有效减少对地下水、地表水、土壤及空气的污染。</div>
