--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <div><a nslog-type="9317" href="https://baike.baidu.com/pic/%E5%9E%83%E5%9C%BE%E5%88%86%E7%B1%BB/2904193/0/8435e5dde71190ef76c63f2317538a16fdfaae51cabc?fr=lemma&amp;ct=single" target="_blank" title=""><br /></a>
                       <div label-module="para">
                         <div><a nslog-type="9317" href="images/SS9}~4]Y}E3]W$6%J[5GX86.png?fr=lemma&amp;ct=single" target="_blank" title=""><br />
-                        <img src="images/SS9}~4]Y}E3]W$6%J[5GX86.png" width="335" height="167" /></a></div>
+                        <img src="images/{RHY(V0[M``)0[RAC)6GDQ7.png" width="310" height="202" /></a></div>
                       </div>
                     </div>
                     <strong><a target="_blank" href="https://baike.baidu.com/item/%E5%85%B6%E4%BB%96%E5%9E%83%E5%9C%BE/10379912" data-lemmaid="10379912">其他垃圾</a></strong>（上海称<strong><a target="_blank" href="https://baike.baidu.com/item/%E5%B9%B2%E5%9E%83%E5%9C%BE/23589706" data-lemmaid="23589706">干垃圾</a></strong>）包括除上述几类垃圾之外的砖瓦陶瓷、渣土、卫生间废纸、纸巾等难以回收的废弃物及尘土、食品袋（盒）。采取卫生填埋可有效减少对地下水、地表水、土壤及空气的污染。</div>
