--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 
 	<div id="templatemo_header">
     	<div id="site_title">
-            <a href="#"><img src="images/templatemo_logo.png" alt="LOGO" /><span>Y怀化学院垃圾分类俱乐部</span></a>
+            <a href="#"><img src="images/templatemo_logo.png" alt="LOGO" /><span>怀化学院垃圾分类俱乐部</span></a>
         </div> 
     	<!-- end of site_title -->
     </div><!-- end of header -->
