--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
             <h4>扫码加入qq群：<br />
             </h4>
             </div>
-    	  <span class="cleaner"><img src="images/怀化学院垃圾分类俱乐群聊二维码.png" width="298" height="313" /></span>
+    	  <img src="images/6}75VD%TP$72YY$N__LEVYK.png" width="279" height="443" />
     	  <div class="cleaner"></div>
         </div>
 		<div class="cleaner"></div>
