--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
             <h4>扫码加入qq群：<br />
             </h4>
             </div>
-    	  <img src="images/6}75VD%TP$72YY$N__LEVYK.png" width="279" height="443" />
+    	  <img src="images/5G~`RK8EON3A)CVDY61W8WK.png" width="368" height="272" />
     	  <div class="cleaner"></div>
         </div>
 		<div class="cleaner"></div>
